[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interactable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Obstacle.gd" type="Script" id=2]
[ext_resource path="res://bigrock.png" type="Texture" id=3]
[ext_resource path="res://DefaultLabel.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[node name="Obstacle" groups=[
"Obstacle",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
needed_item = null
needed_item_amount = null

[node name="StaticBody2D" type="StaticBody2D" parent="." index="0"]
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
physics_material_override = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
shape = SubResource( 1 )
_sections_unfolded = [ "shape" ]

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 3 )

[node name="InteractionArrow" parent="." index="2"]
visible = false
use_press_e_sprite = true

[node name="DefaultLabel" parent="." index="3" instance=ExtResource( 4 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -50.0
margin_right = 106.0
margin_bottom = -34.0
align = 1

[connection signal="player_sighted" from="InteractionArrow" to="." method="_on_InteractionArrow_player_sighted"]
